scrollbar left side fixed

--- a/upkook_web/static/material/1.3.0/css/material.css
+++ b/upkook_web/static/material/1.3.0/css/material.css
@@ -7382,8 +7382,6 @@ input.md-btn[type="submit"] {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow-y: auto;
-  overflow-x: hidden;
   position: relative;
   -webkit-overflow-scrolling: touch; }
 
