--- a/upkook_web/static/site/css/custom.css
+++ b/upkook_web/static/site/css/custom.css
@@ -11,13 +11,14 @@ html, body {
   padding: 0;
   font-size: 16px;
   font-family: iranyekan, Tahoma, sans-serif;
-  direction: rtl;
   text-align: right;
 }
 
 body {
   color: #212529;
   line-height: 1.8;
+  direction: rtl;
+  overflow-x: hidden;
 }
 
 a, a:hover {
@@ -639,8 +640,6 @@ footer.footer-bare a:visited {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  overflow-y: auto;
-  overflow-x: hidden;
   position: relative;
   -webkit-overflow-scrolling: touch;
 }
